src/objects/tdc_tsw__SMS_APP_Number__c.object
<CustomObject>
    <fields>
        <fullName>tdc_tsw__AutoForward_to_Mobile__c</fullName>
        <label>AutoForward to Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Auto_Forward_Email__c</fullName>
        <label>Auto Forward Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Automation_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automation Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Counter_Reset_Limit__c</fullName>
        <label>Counter Reset Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Country_Area_Code__c</fullName>
        <label>Country Area Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Default_Sender_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Sender Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Default_Sms_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Sms Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Disable_Incoming_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Incoming Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Email_Alert_To_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Alert To Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Incoming_Server__c</fullName>
        <label>Incoming Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__LastSyncDate__c</fullName>
        <label>LastSyncDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Link_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Message_Service_Id__c</fullName>
        <label>Message Service Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__New_Approach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Approach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Number__c</fullName>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__OrgId__c</fullName>
        <label>OrgId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Profile__c</fullName>
        <label>Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Provider__c</fullName>
        <label>Provider</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__RemainingCredit__c</fullName>
        <label>RemainingCredit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Review_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Show_Usage_In_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Usage In App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sms_Count__c</fullName>
        <label>Sms Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Sno__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Sno</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Start_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Token__c</fullName>
        <label>Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__TotalCredit__c</fullName>
        <label>TotalCredit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Total_License_For_Virtual_Number__c</fullName>
        <label>Total License For Virtual Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Trial_Expire_Date__c</fullName>
        <label>Trial Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__UsedCredit__c</fullName>
        <label>UsedCredit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__User_Id__c</fullName>
        <label>User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SMS APP Number</label>
    <nameField>
        <label>SMS APP Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS APP Numbers</pluralLabel>
    <recordTypes>
        <fullName>tdc_tsw__OrgConfig</fullName>
        <active>true</active>
        <label>OrgConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>tdc_tsw__UserConfig</fullName>
        <active>true</active>
        <label>UserConfig</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>